# invest_tracker

./: README.md  pyproject.toml  requirements.txt
src/ahorro/: app.py  app_flask.py  dashboard.py
src/ahorro/core/: config.py
src/ahorro/db/: database.py  models.py  sqlmodel.py
src/ahorro/templates/: portfolio.html  transactions_page.html  welcome.html
src/ahorro/utils/: generateHash.py  paths.py  updateTickers.py
src/utils/: paths.py
templates/: base.html  home.html  login.html  portfolio.html  transactions_page.html  welcome.html
test/: dummy_ddbb.py
