[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ahorro"
version = "0.1.0"
description = "Proyecto para seguir mis inversiones."
readme = "README.md"
requires-python = ">=3.12"

# Base dependencies
dependencies = [
    "Flask==3.1.0",
    "pandas==2.2.3",
    "werkzeug==3.1.3",
    "numpy==2.2.5",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "plotly==6.0.1",
    "yfinance==0.2.57"
]

[project.optional-dependencies]
# Dev dependencies
dev = [
    "pytest",
    "ipykernel==6.29.5",
]

# --- Setuptools specific configuration ---
[tool.setuptools.packages.find]
where = ["src"] 

